@@ -1,6 +1,6 @@
 Package: rcdk
-Version: 3.0.4
-Date: 2010-10-20
+Version: 3.0.5
+Date: 2010-11-07
 Title: rcdk - Interface to the CDK Libraries
 Author: Rajarshi Guha <rajarshi.guha@gmail.com>
 Maintainer: Rajarshi Guha <rajarshi.guha@gmail.com>
